# startr

./: AMAZON_LINUX_DEPLOYMENT.txt  ARCHITECTURE.md  AWS_VERCEL_DEPLOYMENT.txt  BACKEND_COMPLETE.md  CODE_QUALITY_IMPROVEMENTS.md  COLOR_PALETTE_OPTIONS.md  COMPLETE_PROJECT_PLAN.md  CURRENT_STATUS.md  DARK_THEME_IMPLEMENTATION.md  DEPLOY.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOY_CHECKLIST.md  DEPLOY_STEP_BY_STEP.md  DIGITALOCEAN_DEPLOYMENT.md  EC2_HTTPS_CORS_DEPLOYMENT_GUIDE.md  EC2_KEY_PAIR_GUIDE.txt  EC2_VERCEL_DEPLOYMENT.txt  FEATURE_AUDIT.md  FINAL_DEPLOYMENT_FIXES.md  FRONTEND_CHECKLIST.md  FRONTEND_PLAN.md  GENERATE_TEST_ACCOUNTS.md  HINGE_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  PRODUCTION_ROADMAP.md  PROJECT_TODO.md  QUICK_TEST_ACCOUNTS.md  QUICK_TEST_GUIDE.md  README.md  TESTING_GUIDE.md  TESTING_UI_UX.md  UI_UX_ENHANCEMENT_PLAN.md  UI_UX_IMPLEMENTATION_SUMMARY.md  WEBSOCKET_DEBUG.md  copy-nginx-config-to-ec2.sh  create-nginx-config.sh  deploy-aws-lightsail.sh  deploy-droplet.sh  (+17 more)
backend/: .dockerignore  .env.example  .gitignore  CLEARBIT_REPLACEMENT.md  CRUNCHBASE_SETUP.md  DOCKER.md  Dockerfile  ETL_ALTERNATIVES.md  ETL_API_KEYS.md  ETL_SETUP.md  FREE_CLEARBIT_ALTERNATIVES.md  FREE_ETL_SETUP.md  MIGRATIONS.md  ML_SETUP.md  ML_TODO.md  OAUTH_SETUP.md  OAUTH_TESTING.md  README.md  SECURITY.md  SYNTHETIC_DATA.md  TEST_COMMANDS.md  cors-examples.txt  generate-passwords.sh  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/core/: auth.py  cache.py  config.py  cors.py  dependencies.py  error_middleware.py  exceptions.py  handlers.py  rate_limit.py  redis.py  security_middleware.py  turnstile.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  match.py  message.py  notification.py  profile.py  prompt_template.py  startup_of_month.py  user.py
backend/app/schemas/: admin.py  auth.py  common.py  diligence.py  errors.py  feed.py  match.py  message.py  notification.py  profile.py  prompt_template.py  storage.py
backend/app/services/: admin.py  auth_service.py  diligence.py  (+14 more)
backend/deploy/: README.md  deploy.sh  nginx-site.conf  startr-backend.service
backend/migrations/: __init__.py  env.py
backend/scripts/: __init__.py  check_dependencies.py  delete_test_users.py  delete_users.py  enrich_profiles.py  fix_user_profile_link.py  generate_synthetic_data.py  security_audit.py  seed_data.py
backend/tests/: README.md  __init__.py  conftest.py  test_admin.py  test_auth.py  test_auth_email_verification.py  test_auth_password_reset.py  test_auth_token_functions.py  test_diligence.py  test_email_service.py  test_example.py  test_feed.py  test_matches.py  test_messaging.py  test_ml.py  test_oauth_service.py  test_profiles.py  test_prompts.py  test_realtime.py  test_security_middleware.py  test_storage.py
(+135 files in other folders)
