[project]
name = "vc-matcher-backend"
version = "0.1.0"
description = "FastAPI backend for the VC × Startup matching platform"
authors = [{ name = "Ambitious Project", email = "dev@ambitious.local" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.4.0",
    "pydantic>=2.4.0",
    "email-validator>=2.0.0",
    "sqlmodel>=0.0.22",
    "psycopg[binary]>=3.2.1",
    "redis>=5.0.8",
    "httpx>=0.27.2",
    "pyyaml>=6.0.2",
    "structlog>=24.1.0",
    "python-multipart>=0.0.9",
    "alembic>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.9",
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.7",
    "mypy>=1.11.2",
]
ml = [
    "langchain>=0.2.14",
    "torch>=2.4.1",
]

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

