[project]
name = "vc-matcher-backend"
version = "0.1.0"
description = "FastAPI backend for the VC × Startup matching platform"
authors = [{ name = "Ambitious Project", email = "dev@ambitious.local" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.4.0",
    "pydantic>=2.4.0",
    "email-validator>=2.0.0",
    "sqlmodel>=0.0.22",
    "psycopg[binary]>=3.2.1",
    "redis>=5.0.8",
    "httpx>=0.27.2",
    "pyyaml>=6.0.2",
    "structlog>=24.1.0",
    "python-multipart>=0.0.9",
    "alembic>=1.13.0",
    "slowapi>=0.1.9",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "authlib>=1.3.0",
    "firebase-admin>=6.5.0",
    "boto3>=1.34.0",  # For S3/MinIO storage
    "pillow>=10.0.0",  # For image processing
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.9",
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.2",  # For TestClient
    "fakeredis>=2.22.0",  # Mock Redis for tests
    "mypy>=1.11.2",
]
ml = [
    "langchain>=0.2.14",
    "torch>=2.4.1",
    "sentence-transformers>=2.7.0",
    "numpy>=1.26.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (require DB/Redis)",
    "slow: Slow tests",
]

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

